--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ subprojects {
     // Creates Java 8 byte code
     if (project.ext.build_java11) {
         tasks.withType(JavaCompile).configureEach {
-            sourceCompatibility = 15
+//            sourceCompatibility = 15
             options.release = 11
         }
     }
@@ -217,7 +217,8 @@ subprojects {
 
         // Disable ErrorProne for benchmarks and auto code generators
 //        options.errorprone.enabled = false
-        if (name.startsWith("compileBenchmark") || name.startsWith("compileGenerate")) {
+        if (name.startsWith("compileBenchmark") || name.startsWith("compileGenerate") || name.startsWith("compileTest")
+                || name.startsWith("compileExperimental")) {
             options.errorprone.enabled = false
             return
         }
