--- a/main/boofcv-io/build.gradle
+++ b/main/boofcv-io/build.gradle
@@ -5,6 +5,6 @@ dependencies {
 	api project(':main:boofcv-recognition')
 	api project(':main:boofcv-reconstruction')
 
-	api group: 'org.yaml', name: 'snakeyaml', version: '1.23'
+	api group: 'org.yaml', name: 'snakeyaml', version: smakeyaml_version
 	api group: 'commons-io', name: 'commons-io', version: commons_io_version
 }
