--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ allprojects {
     apply plugin: 'com.peterabeles.gversion'
 
     group = 'org.boofcv'
-    version = '0.40-SNAPSHOT'
+    version = '0.40'
 
     ext.build_java11 = true // IntelliJ has issues when this is set to true
 
@@ -127,7 +127,7 @@ subprojects {
 
     dependencies {
         api(group: 'org.georegression', name: 'georegression', version: '0.24'){exclude group: 'org.ddogleg'}
-        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.21-SNAPSHOT')
+        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.21')
 
         api group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
 
