--- a/main/checks/build.gradle
+++ b/main/checks/build.gradle
@@ -15,17 +15,17 @@ dependencies {
 	testImplementation project(':main:boofcv-types').sourceSets.test.output
 	testImplementation project(':integration:boofcv-swing')
 
-	runtime project(':main:boofcv-feature').sourceSets.experimental.output
-	runtime project(':main:boofcv-feature').sourceSets.benchmark.output
-	runtime project(':main:boofcv-geo').sourceSets.benchmark.output
-	runtime project(':main:boofcv-io').sourceSets.benchmark.output
-	runtime project(':main:boofcv-ip').sourceSets.benchmark.output
-	runtime project(':main:boofcv-ip-multiview').sourceSets.benchmark.output
-	runtime project(':main:boofcv-learning').sourceSets.benchmark.output
-	runtime project(':main:boofcv-recognition').sourceSets.benchmark.output
-	runtime project(':main:boofcv-reconstruction').sourceSets.benchmark.output
-	runtime project(':main:boofcv-sfm').sourceSets.benchmark.output
-	runtime project(':integration:boofcv-ffmpeg') // one test decodes a mp4
+	runtimeClasspath project(':main:boofcv-feature').sourceSets.experimental.output
+	runtimeClasspath project(':main:boofcv-feature').sourceSets.benchmark.output
+	runtimeClasspath project(':main:boofcv-geo').sourceSets.benchmark.output
+	runtimeClasspath project(':main:boofcv-io').sourceSets.benchmark.output
+	runtimeClasspath project(':main:boofcv-ip').sourceSets.benchmark.output
+	runtimeClasspath project(':main:boofcv-ip-multiview').sourceSets.benchmark.output
+	runtimeClasspath project(':main:boofcv-learning').sourceSets.benchmark.output
+	runtimeClasspath project(':main:boofcv-recognition').sourceSets.benchmark.output
+	runtimeClasspath project(':main:boofcv-reconstruction').sourceSets.benchmark.output
+	runtimeClasspath project(':main:boofcv-sfm').sourceSets.benchmark.output
+	runtimeClasspath project(':integration:boofcv-ffmpeg') // one test decodes a mp4
 
 	implementation(group: 'com.peterabeles', name: 'regression', version: auto64to32_version) {
 		exclude(group: "org.openjdk.jmh")
