--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ allprojects {
     apply plugin: 'com.peterabeles.gversion'
 
     group = 'org.boofcv'
-    version = '0.41-SNAPSHOT'
+    version = '0.40.1'
 
     ext.build_java11 = true // IntelliJ has issues when this is set to true
 
