--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,7 @@ allprojects {
     apply plugin: 'com.peterabeles.gversion'
 
     group = 'org.boofcv'
-    version = '0.40.1'
-
-    ext.build_java11 = true // IntelliJ has issues when this is set to true
+    version = '0.41-SNAPSHOT'
 
     createVersionFile.enabled = false // run only once. enabled in types
 }
@@ -32,7 +30,7 @@ project.ext.junit_version = '5.8.2'
 project.ext.errorprone_version = '2.10.0'
 project.ext.nullaway_version = '0.9.5'
 project.ext.auto64to32_version = '3.1.0'
-project.ext.smakeyaml_version = '1.23'
+project.ext.snakeyaml_version = '1.23'
 project.ext.jmh_version = '1.33'
 
 // Which native platforms are supported can be specified in the command line.  Otherwise
@@ -58,12 +56,10 @@ subprojects {
 
     // Prevents tons of errors if someone is using ASCII
     tasks.withType(JavaCompile).configureEach { options.encoding = "UTF-8" }
-    // Creates Java 8 byte code
-    if (project.ext.build_java11) {
-        tasks.withType(JavaCompile).configureEach {
-            sourceCompatibility = 17
-            options.release = 11
-        }
+    // Creates Java 11 byte code but Java 17 syntax
+    tasks.withType(JavaCompile).configureEach {
+        sourceCompatibility = 17
+        options.release = 11
     }
 
     // Enable incremental compile. Should make single file changes faster
@@ -126,7 +122,7 @@ subprojects {
     }
 
     dependencies {
-        api(group: 'org.georegression', name: 'georegression', version: '0.24'){exclude group: 'org.ddogleg'}
+        api(group: 'org.georegression', name: 'georegression', version: '0.24') { exclude group: 'org.ddogleg' }
         api(group: 'org.ddogleg', name: 'ddogleg', version: '0.21')
 
         api group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
@@ -158,13 +154,11 @@ subprojects {
         benchmarkAnnotationProcessor("org.openjdk.jmh:jmh-generator-annprocess:$jmh_version")
 
         // needed to use Java 11+ syntax with Java 1.8 byte code
-        if (project.ext.build_java11) {
-            annotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
-            noautoAnnotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
-            testAnnotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
-            benchmarkAnnotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
-            generateAnnotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
-        }
+        annotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
+        noautoAnnotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
+        testAnnotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
+        benchmarkAnnotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
+        generateAnnotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
 
         annotationProcessor "org.projectlombok:lombok:${project.lombok_version}"  // @Getter @Setter
         noautoAnnotationProcessor "org.projectlombok:lombok:${project.lombok_version}"  // @Getter @Setter
