build - older junit for intellij - Updated DDogleg

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ project.ext.lombok_version = '1.18.20'
 project.ext.jabel_version = '0.4.2'
 project.ext.guava_version = '31.0.1-jre'
 project.ext.args4j_version = '2.33'
-project.ext.junit_version = '5.8.2'
+project.ext.junit_version = '5.8.1'
 project.ext.errorprone_version = '2.11.0'
 project.ext.nullaway_version = '0.9.5'
 project.ext.auto64to32_version = '3.1.0'
@@ -125,7 +125,7 @@ subprojects {
 
     dependencies {
         api(group: 'org.georegression', name: 'georegression', version: '0.25-SNAPSHOT') { exclude group: 'org.ddogleg' }
-        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.21')
+        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.22-SNAPSHOT')
 
         api group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
 
