--- a/applications/build.gradle
+++ b/applications/build.gradle
@@ -11,7 +11,7 @@ dependencies {
 	api project(':integration:boofcv-WebcamCapture')
 	api project(':integration:boofcv-pdf')
 
-	api group: 'args4j', name: 'args4j', version: '2.33'
+	api "args4j:args4j:$args4j_version"
 }
 
 // Create a jar which contains all the applications
