--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ project.ext.jmh_version = '1.33'
 project.ext.jetnull_version = '23.0.0'
 project.ext.jsr250_version = '1.0'
 project.ext.jsr305_version = '3.0.2'
+project.ext.trove4j_version = '3.0.3'
 
 // Which native platforms are supported can be specified in the command line.  Otherwise
 // the default is to support all of them
@@ -126,7 +127,7 @@ subprojects {
         api(group: 'org.georegression', name: 'georegression', version: '0.25-SNAPSHOT') { exclude group: 'org.ddogleg' }
         api(group: 'org.ddogleg', name: 'ddogleg', version: '0.22-SNAPSHOT')
 
-        api group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
+        api group: 'net.sf.trove4j', name: 'trove4j', version: project.trove4j_version
 
         compileOnly "org.projectlombok:lombok:${project.lombok_version}"
         compileOnly "org.jetbrains:annotations:$project.jetnull_version" // @Nullable
