Updated language check to allow var with typecast

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ project.ext.args4j_version = '2.33'
 project.ext.junit_version = '5.9.1'
 project.ext.errorprone_version = '2.11.0'
 project.ext.nullaway_version = '0.9.5'
-project.ext.auto64to32_version = '3.1.2'
+project.ext.auto64to32_version = '3.2.0-SNAPSHOT'
 project.ext.snakeyaml_version = '1.33'
 project.ext.jmh_version = '1.36'
 project.ext.jetnull_version = '23.0.0'
