--- a/build.gradle
+++ b/build.gradle
@@ -124,7 +124,7 @@ subprojects {
     }
 
     dependencies {
-        api(group: 'org.georegression', name: 'georegression', version: '0.25.2') { exclude group: 'org.ddogleg' }
+        api(group: 'org.georegression', name: 'georegression', version: '0.26-SNAPSHOT') { exclude group: 'org.ddogleg' }
         api(group: 'org.ddogleg', name: 'ddogleg', version: '0.23')
 
         api group: 'net.sf.trove4j', name: 'trove4j', version: project.trove4j_version
