--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ allprojects {
     apply plugin: 'com.peterabeles.gversion'
 
     group = 'org.boofcv'
-    version = '0.43-SNAPSHOT'
+    version = '0.43'
 
     createVersionFile.enabled = false // run only once. enabled in types
 }
@@ -124,7 +124,7 @@ subprojects {
     }
 
     dependencies {
-        api(group: 'org.georegression', name: 'georegression', version: '0.26-SNAPSHOT') { exclude group: 'org.ddogleg' }
+        api(group: 'org.georegression', name: 'georegression', version: '0.26.1') { exclude group: 'org.ddogleg' }
         api(group: 'org.ddogleg', name: 'ddogleg', version: '0.23')
 
         api group: 'net.sf.trove4j', name: 'trove4j', version: project.trove4j_version
@@ -240,6 +240,8 @@ subprojects {
         if (JavaVersion.current().isJava9Compatible()) {
             options.addBooleanOption('html5', true)
         }
+
+        failOnError false
     }
 
     // Force the release build to fail if it depends on a SNAPSHOT
