--- a/integration/boofcv-android/build.gradle
+++ b/integration/boofcv-android/build.gradle
@@ -1,48 +1,46 @@
-// Forsake the standard Android build environment since it's too complex
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id 'com.android.library' version '7.2.2'
+    id 'org.jetbrains.kotlin.android' version '1.7.20'
+}
+apply plugin: 'maven-publish'
 
-// Find all the possible versions of android that it could use and use the most recent
-ext.ANDROID_HOME = System.getenv()['ANDROID_HOME'];
-ext.ANDROID_PLATFORMS = new File((String)ext.ANDROID_HOME+"/platforms").list().grep{it.contains("android-")}
+android {
+    namespace "${project.group}.android.ibrary"
+    compileSdk 33
 
-if( ext.ANDROID_PLATFORMS.isEmpty() ) {
-    ext.ANDROID_PLATFORMS = new File((String)ext.ANDROID_HOME).list().grep{it.contains("android-")}
-    if( ext.ANDROID_PLATFORMS.isEmpty() )
-        throw new RuntimeException("Can't find any platforms in "+ext.ANDROID_HOME+"/platforms")
-    else
-        ext.ANDROID_PATH = ext.ANDROID_HOME+ext.ANDROID_PLATFORMS.sort().last()
-} else
-    ext.ANDROID_PATH = ext.ANDROID_HOME+"/platforms/"+ext.ANDROID_PLATFORMS.sort().last()
+    defaultConfig {
+        minSdk 22 // Depends on which API you use
+        targetSdk 33
+        versionCode 1 // Not sure if I really need to update to use this or not
+        versionName "$project.version"
 
-ext.ANDROID_VERSION = ext.ANDROID_PATH.substring(ext.ANDROID_PATH.indexOf('-')+1,ext.ANDROID_PATH.length())
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
 
-println "Build Android module using $ext.ANDROID_PATH"
-println "Android version is $ext.ANDROID_VERSION"
+    buildTypes {
+        release {
+            minifyEnabled false
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
 
-// disable tests since they can't be run on a regular desktop
-test.enabled = false
+    kotlinOptions { jvmTarget = '11' }
+}
 
 repositories {
-    maven {
-        url 'https://maven.google.com/'
-        name 'Google'
-    }
+    google()
+    mavenCentral()
+    mavenLocal()
 }
 
-task unzipJar(type: Copy) {
-    from zipTree('commons-collections-3.2.jar')
-    into ("$buildDir/libs/commons-collection")
-    include "**/*.class"
-    exclude "**/Unmodifiable.class"
-}
-
-try {
-    if( Integer.parseInt(ext.ANDROID_VERSION) >= 29 ) {
-        println("WARNING!!! javadoc will fail with this version of Android")
+configurations.configureEach {
+    resolutionStrategy {
+        force "org.jetbrains:annotations:$project.jetnull_version"
     }
-} catch (NumberFormatException e) {
-    // Did Google just switch their versions to letter?? BAD GOOGLE!
-    System.err.println("Bad number format for version: "+ext.ANDROID_VERSION)
-    System.err.println(e.getMessage());
 }
 
 dependencies {
@@ -50,13 +48,81 @@ dependencies {
     api project(':main:boofcv-feature')
     api project(':main:boofcv-geo')
 
-    // Google doesn't provide access to an android.jar
-    // A proper android library could be built but that seems to make
-    // the build become wonky and IntelliJ doesn't like it. This is less error prone
-    implementation fileTree(dir: ANDROID_PATH, include: '*.jar')
-    implementation fileTree(dir: ANDROID_PATH+'data/', include: '*.jar')
+    def fragment_version = "2.5.3"
 
-    // This imports files as aar which require extra work to import
-    // instead I modified the code to not require them
-    compileOnly 'com.android.support:support-media-compat:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.navigation:navigation-fragment-ktx:$fragment_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$fragment_version"
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    compileOnly "org.jetbrains:annotations:$project.jetnull_version" // @Nullable
+
+    compileOnly 'com.android.support:support-annotations:27.1.1'
+
+    annotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:${project.jabel_version}")
 }
+
+afterEvaluate {
+    android.libraryVariants.each { variant ->
+        // Only publish the release variant
+        if (variant.name != "release")
+            return
+
+        // if Maven central isn't setup in ~/.gradle/gradle.properties fill in these variables to make it happy
+        if (!project.hasProperty('ossrhUsername')) {
+            ext.ossrhUsername = "dummy"
+            ext.ossrhPassword = "dummy"
+        }
+
+        publishing {
+            publications.create(variant.name, MavenPublication) {
+                from components.findByName(variant.name)
+
+                groupId "$project.group"
+                artifactId = project.name
+                version "$project.version"
+
+                pom {
+                    name = 'BoofCV'
+                    description = 'BoofCV is an open source Java library for real-time computer vision and robotics applications.'
+                    url = 'https://boofcv.org'
+                    licenses {
+                        license {
+                            name = 'The Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = 'pabeles'
+                            name = 'Peter Abeles'
+                            email = 'peter.abeles@gmail.com'
+                        }
+                    }
+                    scm {
+                        connection = 'scm:git:git://github.com/lessthanoptimal/BoofCV.git'
+                        developerConnection = 'scm:git:git://github.com/lessthanoptimal/BoofCV.git'
+                        url = 'https://github.com/lessthanoptimal/BoofCV'
+                    }
+                }
+            }
+            repositories {
+                maven {
+                    def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+                    def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
+                    url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+                    credentials {
+                        username ossrhUsername
+                        password ossrhPassword
+                    }
+                }
+            }
+
+        }
+    }
+}
+
