--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ allprojects {
     apply plugin: 'com.peterabeles.gversion'
 
     group = 'org.boofcv'
-    version = '1.1.1-SNAPSHOT'
+    version = '1.1.1'
 
     createVersionFile.enabled = false // run only once. enabled in types
 }
@@ -131,8 +131,8 @@ subprojects {
     }
 
     dependencies {
-        api(group: 'org.georegression', name: 'georegression', version: '0.26.1') { exclude group: 'org.ddogleg' }
-        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.23')
+        api(group: 'org.georegression', name: 'georegression', version: '0.26.2') { exclude group: 'org.ddogleg' }
+        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.23.1')
 
         api group: 'net.sf.trove4j', name: 'trove4j', version: project.trove4j_version
 
