--- a/build.gradle
+++ b/build.gradle
@@ -132,7 +132,7 @@ subprojects {
 
     dependencies {
         api(group: 'org.georegression', name: 'georegression', version: '0.26.3') { exclude group: 'org.ddogleg' }
-        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.23.1')
+        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.23.2-SNAPSHOT')
 
         api group: 'net.sf.trove4j', name: 'trove4j', version: project.trove4j_version
 
