--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ allprojects {
     apply plugin: 'com.peterabeles.gversion'
 
     group = 'org.boofcv'
-    version = '1.1.2'
+    version = '1.1.3-SNAPSHOT'
 
     createVersionFile.enabled = false // run only once. enabled in types
 }
