--- a/integration/boofcv-android/build.gradle
+++ b/integration/boofcv-android/build.gradle
@@ -36,6 +36,7 @@ repositories {
     google()
     mavenCentral()
     mavenLocal()
+    maven { url = "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 configurations.configureEach {
