--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,8 @@ org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAME
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+# https://stackoverflow.com/questions/71044526/your-project-has-set-android-useandroidx-true-but-configuration-debugruntimec
+android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 # Enables namespacing of each library's R class so that its R class includes only the
